tests/architecture/fixtures/invalid/infrastructure-boundaries/unresolved-internal.ts
export { missing } from "@/definitely-missing";
